# rpg-adventure

./: .gitignore  CMakeLists.txt  README.md  normalize_audio.sh
assets/config/: default_settings.json
doc/: 0_structure_and_roadmap.md  cpp_review.md  naming_conventions.md  todo_list.md
doc/core/: 0_structure_and_roadmap.md  1_project_setup.md  2_0_core_engine_and_state_machine.md  2_1_logging_and_menu_state.md  3_0_resource_managment.md  3_5_main_menu_settings_core.md  3_6_audio_system_and_settings_ui.md  3_7_audio_asset_pipeline.md  4_0_ecs.md  5_4_1_dynamic_logging.md  5_4_2_visual_debug_rendering.md  6_settings_persistence.md
doc/cpp-review/cpp-core/: 1_concetti_base_e_tipi_moderni.md  2_progettazione_delle_classi_costruzione_e_distruzione.md  3_gestione_della_memoria_smart_pointers.md  4_architettura_e_polimorfismo.md  5_cpp_avanzato_template_e_metaprogrammazione.md  6_gestione_degli_errori_e_tipi_monadici.md
doc/cpp-review/game-design/: 1_loop_di_gioco.md  2_paradigma_ecs_entity_component_system.md
include/audio/: AudioSettings.hpp
include/components/: Components.hpp
include/core/: ConfigManager.hpp  Constants.hpp  Game.hpp  State.hpp  StateMachine.hpp
include/resources/: AssetManager.hpp
include/states/: GameState.hpp  MainMenuState.hpp  SettingsState.hpp
include/systems/: DebugRenderSystem.hpp  MovementSystem.hpp  PlayerInputSystem.hpp  RenderSystem.hpp
include/ui/: AnimatedBackground.hpp  Button.hpp
include/utils/: LogLevel.hpp  Logger.hpp
saves/: user_settings.json
src/: main.cpp
src/core/: ConfigManager.cpp  Game.cpp  StateMachine.cpp
src/states/: GameState.cpp  MainMenuState.cpp  SettingsState.cpp
src/systems/: DebugRenderSystem.cpp  MovementSystem.cpp  PlayerInputSystem.cpp  RenderSystem.cpp
src/ui/: AnimatedBackground.cpp  Button.cpp
windows_build/: build.sh  cleanup.sh  linker_fix.c  setup.sh  sfml_compat.hpp  toolchain.cmake
